--- a/report.tex
+++ b/report.tex
@@ -109,7 +109,13 @@ The main problem that our team is aiming to address in this project is to train 
 These sub-algorithms must be placed within one main algorithm. This main algorithm will assign weights to the other five algorithms, along the lines of the weighted majority classifier. The final result must be able to fool the image classifier that is provided with exactly B pixels changed in the image. The main algorithm must assign weights to the different algorithms based on some expected performance given the image. Once the algorithms vote on which set of pixels will be changed, the optimizer will select which pixels to actually use from the set. The only thing that will impact the budget for this project will be the absolute number of pixels used to fool the classifier. The adversarial function input must be both image and scalar, which tells the algorithm the expected budget in terms of the ratio image size. Our model must be able to successfully fool the classifier with a budget of P/100, for at least one image, where P is the number of pixels in the image, and must do this in less than 10 seconds per image.
 
 \section{Solution to the Problem}
-In order to accomplish this, the team worked on developing five sub-algorithms to independently attempt to deceive the given classifier. These methods of these five sub-algorithms include the Basic Iterative Method, the dOur team decided that we would independently work on completing the sub-algorithms and then shift towards developing the weighted majority classifier. We believe that by dividing the labor among the group, each team member would be able to specialize in an algorithm and provide higher quality results. Once weights have been assigned, the highest scoring algorithm would be chosen for use against the model. For a successful algorithm, it is expected that it all images in each respective folder, dandelion and grass, would be returned as the model is structured so that if it is unable to categorize the image correctly with a probability greater than fifty percent. 
+In order to accomplish the problem above, the team first worked on choosing and developing five sub-algorithms to independently attempt to deceive the given classifier. The methods of these five sub-algorithms include the Fast Gradient Sign Method, the Basic Iterative Method, the DeepFool method, the Carlini-Wagner method, and the Projected Gradient Descent method. These methods were carefully chosen by conducting extensive research, and we concluded that these methods would work best for our overall algorithm. Our team decided that we would independently work on completing the sub-algorithms individually, and then shift towards developing the weighted majority classifier.\\
+
+We believe that by dividing the labor among the group, each team member would be able to specialize in an algorithm and provide higher quality results. Once weights have been assigned, the highest scoring algorithm would be chosen for use against the model. For a successful algorithm, it is expected that it all images in each respective folder, dandelion and grass, would be returned as the model is structured so that if it is unable to categorize the image correctly with a probability greater than fifty percent.\\
+
+Along with choosing algorithms, other research had to be done to obtain our goal. Our team read up on the two different types of classifiers provided. These two classifiers are the simple majority classifier and the weighted majority classifier. The simple majority classifier works by each individual voting on on class, and then the majority vote wins. This is a simple classifier, however, it has its limitations and may not work well on more complex data sets. The second classifier is the weighted majority classifier, which is the classifier being used in this project. The weighted majority classifier works by assigning an importance weight to every individual classifier, and the target class with the greatest weighted-sum probabilities wins. This classifier is not as simple, but is more effective for this type of problem. A better understanding of these classifiers was crucial in getting the best possible result.\\
+
+In order to track out progress, the group had to record all of our updates (to the algorithms and report) using Git and Github. This will help show the contributions for each group member. All experimental variants of our algorithm will be tracked with separate branches and the best one will then be merged into main. We must repeat this iteration process until we are completely satisfied with out final algorithm. In addition to following the A2P2 document, there were also several updates posted to Brightspace that also had to be followed. These included creating a python notebook to use Vertex AI, and links and methods to prevent model loading issues.
 
 \newpage
 \noindent\section{Selection of Algorithms}
