--- a/report.tex
+++ b/report.tex
@@ -115,7 +115,7 @@ We believe that by dividing the labor among the group, each team member would be
 
 Along with choosing algorithms, other research had to be done to obtain our goal. Our team read up on the two different types of classifiers provided. These two classifiers are the simple majority classifier and the weighted majority classifier. The simple majority classifier works by each individual voting on on class, and then the majority vote wins. This is a simple classifier, however, it has its limitations and may not work well on more complex data sets. The second classifier is the weighted majority classifier, which is the classifier being used in this project. The weighted majority classifier works by assigning an importance weight to every individual classifier, and the target class with the greatest weighted-sum probabilities wins. This classifier is not as simple, but is more effective for this type of problem. A better understanding of these classifiers was crucial in getting the best possible result.\\
 
-In order to track out progress, the group had to record all of our updates (to the algorithms and report) using Git and Github. This will help show the contributions for each group member. All experimental variants of our algorithm will be tracked with separate branches and the best one will then be merged into main. We must repeat this iteration process until we are completely satisfied with out final algorithm. In addition to following the A2P2 document, there were also several updates posted to Brightspace that also had to be followed. These included creating a python notebook to use Vertex AI, and links and methods to prevent model loading issues.
+In order to track our progress, the group had to record all of our updates (to the algorithms and report) using Git and Github. This will help show the contributions for each group member. All experimental variants of our algorithm will be tracked with separate branches and the best one will then be merged into main. We must repeat this iteration process until we are completely satisfied with out final algorithm. In addition to following the A2P2 document, there were also several updates posted to Brightspace that also had to be followed. These included creating a python notebook to use Vertex AI, and links and methods to prevent model loading issues.
 
 \newpage
 \noindent\section{Selection of Algorithms}
@@ -139,6 +139,9 @@ Runtime and performance tradeoffs for DeepFool vary on the size and sophisticati
 
 To generate testing pairs for DeepFool, we would apply it to a copy of the given data to create a reference point for every sample. We would apply the DeepFool to generate a set of adversarial images that would be used to compare the performance of the model on both the original and perturbed variations. The DeepFool algorithm has no need for knowledge representations because it does not rely on them, instead it proceeds by computing the gradient of the machine learning model and then finding the least distance between the decision boundary and the original point. \\
 
+
+
+
 \subsection{Carlini-Wagner}
 
 The CW attack algorithm is an optimization-based adversarial attack that generates perturbations in the input data to deceive deep learning models. The algorithm focuses on crafting adversarial examples with minimal perturbation to the original input, making it challenging for humans to perceive the difference between the original and the modified input. The CW attack algorithm is highly effective in fooling various deep learning models, including image classifiers, even when the models implement robust defenses.\\
@@ -149,9 +152,9 @@ The CW attack algorithm operates by solving an optimization problem that seeks t
 
 \subsubsection{Generating Adversarial Image}
 
-The function "generateadversarialexample" generates adversarial images. The function takes three arguments: the input image, the pixelbudgetratio, and the pre-trained model. The goal of this function is to create an adversarial image that fools the classifier while altering a limited number of pixels according to the specified pixel budget ratio.\\
+The function "generateadversarialexample" generates adversarial images. The function takes three arguments: the input image, the pb-ratio, and the pre-trained model. The goal of this function is to create an adversarial image that fools the classifier while altering a limited number of pixels according to the specified pixel budget ratio.\\
 
-The entire code can be found in Appendix 8.1.1. In the first line the input image is normalized by dividing its pixel value by 255.Normalizing the image ensures that the pixel values fall within the range [0, 1], which is the standard input format for most deep learning models. Next, the pixel budget is calculated by multiplying the total number of pixels in the image (obtained using prod(dim(image))) with the pixelbudgetratio. The ceiling() function rounds up the result to the nearest integer value, ensuring that the pixel budget is a whole number.\\
+The entire code can be found in Appendix 8.1.1. In the first line the input image is normalized by dividing its pixel value by 255. Normalizing the image ensures that the pixel values fall within the range [0, 1], which is the standard input format for most deep learning models. Next, the pixel budget is calculated by multiplying the total number of pixels in the image (obtained using prod(dim(image))) with the pb-ratio. The ceiling() function rounds up the result to the nearest integer value, ensuring that the pixel budget is a whole number.\\
 
 The Carlini-Wagner attack using the CarliniWagnerL2-function from the 'cleverhans' library. The function takes several arguments, such as the TensorFlow session (sess), the pre-trained model (model), the number of classes (nbclasses), and various hyperparameters controlling the attack's behavior. The maxperturbations parameter is set to the calculated pixelbudget to limit the number of pixels that can be altered in the image. The adverserial image is generated by calling the attack object as generated. 
 
@@ -176,7 +179,7 @@ The first step in analyzing the correctness of the FGS algorithm is validating t
 
 The Basic Iterative (BIM) algorithm is an extension of the FGS algorithm that applies the FGS method iteratively, allowing for more precise perturbations. The algorithm performs a fixed number of iterations, applying the FGS method at each step and clipping the resulting adversarial image to ensure that the pixel values remain within a valid range.\\
 
-The correctness of the BI algorithm relies on the same assumptions as the FGS algorithm, but its iterative nature allows for a more fine-grained search of the adversarial perturbations. The BI algorithm has been demonstrated to produce more effective adversarial examples than the FGS algorithm, while still maintaining a relatively low computational cost. Therefore, the BI algorithm can be considered as a valid approach for the given problem, with the caveat that its performance may also be affected by the simplifying assumptions regarding the decision boundaries.\\
+The correctness of the BIM algorithm relies on the same assumptions as the FGS algorithm, but its iterative nature allows for a more fine-grained search of the adversarial perturbations. The BIM algorithm has been demonstrated to produce more effective adversarial examples than the FGS algorithm, while still maintaining a relatively low computational cost. Therefore, the BI algorithm can be considered as a valid approach for the given problem, with the caveat that its performance may also be affected by the simplifying assumptions regarding the decision boundaries.\\
 
 \subsection{Deep Fool}
 
@@ -207,6 +210,30 @@ The main algorithm's perturbation bounding is determined by the individual sub-a
 \newpage
 \section{Complexity Analysis}
 
+As a group we have decided to evaluate the time and space complexity of the five sub algorithims (Fast Gradient Sign, Basic Iterative, Deep Fool, Carlini Wagner, and Projected Gradient Descent)\\
+
+\subsection{Fast Gradient Sign}
+
+The FGS algorithm computes the gradients of the loss function with respect to the input image to generate an adversarial perturbation. The time complexity of the FGS algorithm is determined by the number of operations required to compute these gradients. In a feedforward neural network, the computational cost for a single forward pass is determined by the number of parameters (weights and biases) in the network. This cost is proportional to the number of neurons and the number of connections between them. Let P be the total number of parameters in the neural network. The time complexity for a forward pass through the neural network is O(P). Similarly, the computational cost for a single backward pass (backpropagation) is also proportional to the number of parameters in the network. The backward pass is required to compute the gradients of the loss function with respect to the input image. Therefore, the time complexity for a backward pass is O(P). As the FGS algorithm requires one forward pass and one backward pass, its total time complexity is O(P + P) = O(2 * P), which simplifies to O(P). This linear time complexity makes the FGS algorithm computationally efficient compared to other adversarial attack methods.\\
+
+The space complexity of the FGS algorithm is determined by the memory requirements for storing the gradients of the loss function with respect to the input image. Since the gradient computation involves the same number of parameters as the forward pass, the space complexity is also linear with respect to the number of parameters in the neural network. The FGS algorithm needs to store the gradients for each parameter in the neural network, which results in a space complexity of O(P).\\
+
+\subsection{Basic Iterative}
+
+The BIM method applies the FGS algorithm iteratively, with a smaller step size, until a desired level of perturbation or a maximum number of iterations is reached. The time complexity is O(I * P), where I is the number of iterations and P is the total number of parameters in the neural network. The space complexity of the BI method is O(P), as it only needs to store the gradients for each parameter, similar to the FGS algorithm.\\
+
+\subsection{Deep Fool}
+
+The Deep Fool algorithm is iterative and involves multiple forward and backward passes through the neural network to compute the gradients and perturbations. Its time complexity is O(I * P), where I is the number of iterations and P is the total number of parameters in the neural network. The number of iterations can vary depending on the input image and the classifier's complexity. The space complexity of the Deep Fool algorithm is O(P), as it needs to store the gradients for each parameter and the perturbations for each iteration.\\
+
+\subsection{Carlini Wagner}
+
+The Carlini Wagner algorithm is an optimization-based method that involves solving a constrained optimization problem using gradient descent. Its time complexity is O(I * P), where I is the number of iterations and P is the total number of parameters in the neural network. The number of iterations can vary depending on the optimization problem's difficulty and the chosen optimization algorithm. The space complexity of the Carlini Wagner algorithm is O(P), as it needs to store the gradients for each parameter and the perturbations for each iteration.
+
+\subsection{Projected Gradient Descent}
+
+The PGD algorithm is an iterative method that involves multiple forward and backward passes through the neural network to compute the gradients and apply perturbations. The time complexity is O(I * P), where I is the number of iterations and P is the total number of parameters in the neural network. The number of iterations can vary depending on the input image and the classifier's complexity. The space complexity of the PGD algorithm is O(P), as it needs to store the gradients for each parameter and the perturbations for each iteration.
+
 \clearpage
 \section{Appendix}
 
@@ -216,12 +243,32 @@ The main algorithm's perturbation bounding is determined by the individual sub-a
 Below is the function that generates adverserial images using the Carlini Wagner method
 
 \begin{lstlisting}[language=R, frame=single]
-generateadversarialexample <- function(image, pixelbudgetratio, model) {
-  # Normalize the input image
+library(tensorflow)
+library(keras)
+library(cleverhans)
+library(png)
+
+res=c("","")
+f=list.files("C:\Users\Lenovo\Desktop\Purdue\ie332\a2p2\data-for-332\dandelions\")
+for (i in f){
+test_image <- image_load(paste("C:\Users\Lenovo\Desktop\Purdue\ie332\a2p2\data-for-332\dandelions\",i,sep=""),
+                                  target_size = target_size)
+x <- image_to_array(test_image)
+x <- array_reshape(x, c(1, dim(x)))
+x <- x/255
+pred <- model %>% predict(x)
+if(pred[1,1]<0.50){
+ print(i)
+}
+}
+print(res)
+
+generate_adversarial_example <- function(image, pb_ratio, model) {
+  # Input image normalization
   image <- image / 255
   
-  # Calculate the pixel budget
-  pixelbudget <- ceiling(prod(dim(image)) * pixelbudgetratio)
+  # Pixel budget calculation
+  pixel_budget <- ceiling(prod(dim(image)) * pb_ratio)
   
   # Initialize the Carlini-Wagner attack
   attack <- CarliniWagnerL2(sess, model, nb_classes = 2, batch_size = 1,
@@ -229,7 +276,7 @@ generateadversarialexample <- function(image, pixelbudgetratio, model) {
                              binary_search_steps = 9, max_iterations = 1000,
                              abort_early = TRUE, initial_const = 0.01,
                              clip_min = 0, clip_max = 1,
-                             maxperturbations = pixelbudget)
+                             max_perturbations = pixel_budget)
   
   # Generate the adversarial example
   adversarial_image <- attack$attack(image)
@@ -237,41 +284,23 @@ generateadversarialexample <- function(image, pixelbudgetratio, model) {
   return(adversarial_image)
 }
 
-# generate adverserial image
+image <- C:\Users\Lenovo\Desktop\Purdue\ie332\a2p2\data-for-332\dandelions\636597665741397587-dandelion-1097518082.jpg
 
-# Load an image from your dataset
-image <- ... # Load your specific image here
-
-# Set the pixel budget ratio
-pixel_budget_ratio <- 0.01  # Adjust this value as needed
+# Pixel Budget Radio (1% = 0.01)
+pb_ratio <- 0.01  
 
 # Generate the adversarial example
-adversarial_image <- generate_adversarial_example(image, pixel_budget_ratio, model)
+adversarial_image <- generate_adversarial_example(image, pb_ratio, model)
+
 \end{lstlisting}
 
 \subsubsection{Testing}
-
-\begin{lstlisting}[language=R, frame=single]
-
-# Display the original and adversarial images
-par(mfrow = c(1, 2))
-plot(as.raster(image), main = "Original Image")
-plot(as.raster(adversarial_image), main = "Adversarial Image")
-
-# Test the classifier
-original_pred <- which.max(predict(model, array_reshape(image, c(1, dim(image)))))
-adversarial_pred <- which.max(predict(model, array_reshape(adversarial_image, c(1, dim(adversarial_image)))))
-
-cat("Original Image Prediction:", original_pred, "\n")
-cat("Adversarial Image Prediction:", adversarial_pred, "\n")
-
-\end{lstlisting}
 
 \subsection{Testing/Correctness/Verification}
 
 \subsubsection{Testing of the Carlini-Wagner algorithim}
 
- The goal of the script is to see if the generated adverserial image actually fooled the classifier. The entire code can be found in the Appendix section 8.1.2\\
+ The goal of the script is to see if the generated adverserial image actually fooled the classifier. The entire code can be found in the github repository
 
 The par(mfrow = c(1, 2)) function call sets up a plotting area with one row and two columns, allowing us to display two images side by side. The two plot functions display the original and adversarial images, respectively, with their corresponding titles. This visual comparison helps us confirm that the adversarial image is very similar to the original image, with only subtle differences introduced by the Carlini-Wagner attack algorithm.\\
 
